--- a/src/app/tela-reservas/tela-deletar-reservas/tela-deletar-reservas.component.html
+++ b/src/app/tela-reservas/tela-deletar-reservas/tela-deletar-reservas.component.html
@@ -61,7 +61,7 @@
   <mat-form-field class="boxSize" *ngIf="escolha=='materia'">
     <mat-label>Matéria:</mat-label>
     <mat-select [(value)]="sala" (selectionChange)="procurarSala($event.value)">
-      <mat-option *ngFor="let materias of materia" [value]="materias"><span *ngIf="materias">{{ materias }}</span></mat-option>
+      <mat-option *ngFor="let materias of materia" [value]="materias"><span *ngIf="materias!=undefined">{{ materias }}</span></mat-option>
     </mat-select>
   </mat-form-field>
 
