feat: esqueleto tela solicitacoes registro

--- a/src/app/tela-solicitacoes-registro/tela-solicitacoes-registro.component.scss
+++ b/src/app/tela-solicitacoes-registro/tela-solicitacoes-registro.component.scss
@@ -17,3 +17,34 @@
     align-items: center;
     padding-left: 2%;
   }
+
+  table {
+    width: 100%;
+  }
+  
+  .mat-mdc-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
+  
+  
+
+  .container-table {
+    margin: 5%;
+  }
+
+  .nome{
+    width: 35%;
+  }
+
+  .email{
+    width: 35%;
+  }
+
+  .registrationNumber{
+    width: 20%;
+  }
+
+  .select{
+    width: 5%;
+  }
