--- a/src/app/tela-solicitacoes-registro/tela-solicitacoes-registro.component.html
+++ b/src/app/tela-solicitacoes-registro/tela-solicitacoes-registro.component.html
@@ -8,6 +8,80 @@
       <span>Perfil</span>
     </button>
   </mat-menu>
-
   <span class="tituloH">HEIMDALL</span>
 </mat-toolbar>
+
+<div class="container-table">
+  
+<mat-form-field>
+  <mat-label>Filter</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+</mat-form-field>
+
+<div class="mat-elevation-z4">
+  <table mat-table [dataSource]="dataSource" matSort>
+    
+    <!-- Checkbox Column -->
+    <ng-container matColumnDef="APROVE">
+      <th mat-header-cell *matHeaderCellDef>
+        <mat-checkbox (change)="$event ? toggleAllRowsAprove() : null"
+        [checked]="selectionAprove.hasValue() && isAllAproveSelected()"
+        [indeterminate]="selectionAprove.hasValue() && !isAllAproveSelected()"
+        [disabled]="validateAllSelected(selectionReject)"
+        ></mat-checkbox>
+        Selecione para aprovar
+      </th>
+      <td class="select" mat-cell *matCellDef="let row">
+        <mat-checkbox (click)="$event.stopPropagation()"
+        (change)="$event ? selectionAprove.toggle(row) : null"
+        [checked]="selectionAprove.isSelected(row)"
+        [disabled]="selectionReject.isSelected(row)"
+        ></mat-checkbox>
+    </td>
+    </ng-container>
+    <ng-container matColumnDef="REJEITE">
+    <th mat-header-cell *matHeaderCellDef>
+      <mat-checkbox (change)="$event ? toggleAllRowsReject() : null"
+      [checked]="selectionReject.hasValue() && isAllRejectSelected()"
+      [indeterminate]="selectionReject.hasValue() && !isAllRejectSelected()"
+      [disabled]="validateAllSelected(selectionAprove)"
+      ></mat-checkbox>
+      Selecione para rejeitar
+    </th>
+    <td class="select" mat-cell *matCellDef="let row">
+      <mat-checkbox (click)="$event.stopPropagation()"
+      (change)="$event ? selectionReject.toggle(row) : null"
+      [checked]="selectionReject.isSelected(row)"
+      [disabled]="selectionAprove.isSelected(row)"
+      ></mat-checkbox>
+    </td>
+    </ng-container>
+
+    <ng-container matColumnDef="registrationNumber">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> MATRÍCULA </th>
+      <td class="registrationNumber" mat-cell *matCellDef="let row"> {{ row.registrationNumber }} </td>
+    </ng-container>
+    
+    <ng-container matColumnDef="nome">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> NOME </th>
+      <td class="nome" mat-cell *matCellDef="let row"> {{ row.nome }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> EMAIL </th>
+      <td class="email" mat-cell *matCellDef="let row"> {{ row.email}} </td>
+    </ng-container>
+      
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+    <!-- Row shown when there is no matching data. -->
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    </tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+</div>
+</div>
+
