--- a/src/app/tela-salas/tela-novas-salas/tela-novas-salas.component.html
+++ b/src/app/tela-salas/tela-novas-salas/tela-novas-salas.component.html
@@ -60,10 +60,9 @@
             <mat-label>Qte. de Projetores</mat-label>
           <input matInput type="number" placeholder="Qte. de Projetores" [(ngModel)]="projetor" name="projetor">
         </mat-form-field>
-        <mat-checkbox [(ngModel)]="status" name="status" style="margin-left: 1.7cm;">Sala esta disponível?</mat-checkbox>
       </form>
     </mat-card-content>
 
     
-    <button (click)="save()" class="saveButton">Delete</button>
+    <button (click)="save()" class="saveButton">Cadastrar</button>
   </mat-card>
