--- a/src/app/tela-reservas/tela-deletar-reservas/tela-deletar-reservas.component.html
+++ b/src/app/tela-reservas/tela-deletar-reservas/tela-deletar-reservas.component.html
@@ -25,116 +25,123 @@
 
 </mat-toolbar>
 
-<h1>DELETAR RESERVA DE SALAS</h1>
-
-<h3 style="color: red; text-align: center;">Toda remoção será permanente!</h3>
-
-<div class="insertData">
-  <h5>Escolha o parametro para deletar a sala:</h5>
-  <mat-form-field>
-    <mat-label>Escolha</mat-label>
-    <mat-select [(value)]="escolha">
-      <mat-option value="numero">Número da sala</mat-option>
-      <mat-option value="professor">Nome do professor</mat-option>
-      <mat-option value="materia">Matéria</mat-option>
-      <mat-option value="dia">Dia</mat-option>
-    </mat-select>
-  </mat-form-field>
-
-  <h5 *ngIf="escolha=='numero'">Escolha a sala que possui uma reserva que deseja deletar:</h5>
-  <mat-form-field class="boxSize" *ngIf="escolha=='numero'">
-    <mat-label>Sala:</mat-label>
-    <mat-select [(value)]="sala" (selectionChange)="procurarSala($event.value)">
-      <mat-option *ngFor="let numero of numeroSala" [value]="numero">{{ numero }}</mat-option>
-    </mat-select>
-  </mat-form-field>
-
-  <h5 *ngIf="escolha=='professor'">Escolha o professor que possui uma reserva que deseja deletar:</h5>
-  <mat-form-field class="boxSize" *ngIf="escolha=='professor'">
-    <mat-label>Professor:</mat-label>
-    <mat-select [(value)]="sala" (selectionChange)="procurarSala($event.value)">
-      <mat-option *ngFor="let nome of professorNomes" [value]="nome">{{ nome }}</mat-option>
-    </mat-select>
-  </mat-form-field>
-
-  <h5 *ngIf="escolha=='materia'">Escolha a matéria que possui uma reserva que deseja deletar:</h5>
-  <mat-form-field class="boxSize" *ngIf="escolha=='materia'">
-    <mat-label>Matéria:</mat-label>
-    <mat-select [(value)]="sala" (selectionChange)="procurarSala($event.value)">
-      <mat-option *ngFor="let materias of materia" [value]="materias">{{ materias }}</mat-option>
-    </mat-select>
-  </mat-form-field>
-
-  <h5 *ngIf="escolha=='dia'">Escolha o dia que possui uma reserva que deseja deletar:</h5>
-  <mat-form-field class="boxSize" *ngIf="escolha=='dia'">
-    <mat-label>Dia:</mat-label>
-    <mat-select [(value)]="sala" (selectionChange)="procurarSala($event.value)">
-      <mat-option *ngFor="let dias of dia" [value]="dias">{{ dias }}</mat-option>
-    </mat-select>
-  </mat-form-field>
-  
-
-  
-  <div class="table-container" *ngIf="reservasAchadas.length">
-  
-    <mat-table [dataSource]="reservasAchadas" matSort>
-
-      <ng-container matColumnDef="selecionar">
-        <mat-header-cell *matHeaderCellDef>
-          <mat-checkbox (change)="$event ? masterToggle() : null"
-                        [checked]="selection.hasValue() && isAllSelected()"
-                        [indeterminate]="selection.hasValue() && !isAllSelected()">
-          </mat-checkbox>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let row">
-          <mat-checkbox (click)="$event.stopPropagation()"
-                        (change)="$event ? selection.toggle(row) : null"
-                        [checked]="selection.isSelected(row)">
-          </mat-checkbox>
-        </mat-cell>
-      </ng-container>
+<mat-card>
+    <mat-card-title>Deletar Reserva de Salas</mat-card-title>
+    <mat-card-content>
     
-      <ng-container matColumnDef="numero">
-        <mat-header-cell *matHeaderCellDef>Número da Sala</mat-header-cell>
-        <mat-cell *matCellDef="let sala">
-          <span *ngIf="salaName">{{ salaName.number }}</span>
-        </mat-cell>
-      </ng-container>
+    <h3>Toda remoção será permanente!</h3>
     
-      <ng-container matColumnDef="professor">
-        <mat-header-cell *matHeaderCellDef>Nome do Professor</mat-header-cell>
-        <mat-cell *matCellDef="let sala">
-          <span *ngIf="professor">{{ professor.name }}</span>
-          </mat-cell>
-      </ng-container>
+    <div class="insertData">
+      <h5>Escolha o parametro para deletar a sala:</h5>
+      <mat-form-field class="boxSize">
+        <mat-label>Escolha</mat-label>
+        <mat-select [(value)]="escolha">
+          <mat-option value="numero">Número da sala</mat-option>
+          <mat-option value="professor">Nome do professor</mat-option>
+          <mat-option value="materia">Matéria</mat-option>
+          <mat-option value="dia">Dia</mat-option>
+        </mat-select>
+      </mat-form-field>
     
-      <ng-container matColumnDef="materia">
-        <mat-header-cell *matHeaderCellDef>Matéria</mat-header-cell>
-        <mat-cell *matCellDef="let sala">
-          <span *ngIf="materiaName">{{ materiaName.name }}</span>
-          </mat-cell>
-      </ng-container>
+      <h5 *ngIf="escolha=='numero'">Escolha a sala que possui uma reserva que deseja deletar:</h5>
+      <mat-form-field class="boxSize" *ngIf="escolha=='numero'">
+        <mat-label>Sala:</mat-label>
+        <mat-select [(value)]="sala" (selectionChange)="procurarSala($event.value)">
+          <mat-option *ngFor="let numero of numeroSala" [value]="numero">{{ numero }}</mat-option>
+        </mat-select>
+      </mat-form-field>
     
-      <ng-container matColumnDef="dia">
-        <mat-header-cell *matHeaderCellDef>Dia</mat-header-cell>
-        <mat-cell *matCellDef="let sala">{{ sala.start_time | date:'medium' }}</mat-cell>
-      </ng-container>
-    s
-      <ng-container matColumnDef="remove">
-        <mat-header-cell *matHeaderCellDef>Remove</mat-header-cell>
-        <mat-cell *matCellDef="let sala">
-          <button mat-icon-button (click)="removeRow(sala)">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </mat-cell>
-      </ng-container>
+      <h5 *ngIf="escolha=='professor'">Escolha o professor que possui uma reserva que deseja deletar:</h5>
+      <mat-form-field class="boxSize" *ngIf="escolha=='professor'">
+        <mat-label>Professor:</mat-label>
+        <mat-select [(value)]="sala" (selectionChange)="procurarSala($event.value)">
+          <mat-option *ngFor="let nome of professorNomes" [value]="nome">{{ nome }}</mat-option>
+        </mat-select>
+      </mat-form-field>
     
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
+      <h5 *ngIf="escolha=='materia'">Escolha a matéria que possui uma reserva que deseja deletar:</h5>
+      <mat-form-field class="boxSize" *ngIf="escolha=='materia'">
+        <mat-label>Matéria:</mat-label>
+        <mat-select [(value)]="sala" (selectionChange)="procurarSala($event.value)">
+          <mat-option *ngFor="let materias of materia" [value]="materias">{{ materias }}</mat-option>
+        </mat-select>
+      </mat-form-field>
     
+      <h5 *ngIf="escolha=='dia'">Escolha o dia que possui uma reserva que deseja deletar:</h5>
+      <mat-form-field class="boxSize" *ngIf="escolha=='dia'">
+        <mat-label>Dia:</mat-label>
+        <mat-select [(value)]="sala" (selectionChange)="procurarSala($event.value)">
+          <mat-option *ngFor="let dias of dia" [value]="dias">{{ dias }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      
+    
+      
+      <div class="table-container" *ngIf="reservasAchadas.length">
+      
+        <mat-table [dataSource]="reservasAchadas" matSort>
+    
+          <ng-container matColumnDef="selecionar">
+            <mat-header-cell *matHeaderCellDef>
+              <mat-checkbox (change)="$event ? masterToggle() : null"
+                            [checked]="selection.hasValue() && isAllSelected()"
+                            [indeterminate]="selection.hasValue() && !isAllSelected()">
+              </mat-checkbox>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              <mat-checkbox (click)="$event.stopPropagation()"
+                            (change)="$event ? selection.toggle(row) : null"
+                            [checked]="selection.isSelected(row)">
+              </mat-checkbox>
+            </mat-cell>
+          </ng-container>
+        
+          <ng-container matColumnDef="numero">
+            <mat-header-cell *matHeaderCellDef>Número da Sala</mat-header-cell>
+            <mat-cell *matCellDef="let sala">
+              <span *ngIf="salaName">{{ salaName.number }}</span>
+            </mat-cell>
+          </ng-container>
+        
+          <ng-container matColumnDef="professor">
+            <mat-header-cell *matHeaderCellDef>Nome do Professor</mat-header-cell>
+            <mat-cell *matCellDef="let sala">
+              <span *ngIf="professor">{{ professor.name }}</span>
+              </mat-cell>
+          </ng-container>
+        
+          <ng-container matColumnDef="materia">
+            <mat-header-cell *matHeaderCellDef>Matéria</mat-header-cell>
+            <mat-cell *matCellDef="let sala">
+              <span *ngIf="materiaName">{{ materiaName.name }}</span>
+              </mat-cell>
+          </ng-container>
+        
+          <ng-container matColumnDef="dia">
+            <mat-header-cell *matHeaderCellDef>Dia</mat-header-cell>
+            <mat-cell *matCellDef="let sala">{{ sala.start_time | date:'medium' }}</mat-cell>
+          </ng-container>
+        s
+          <ng-container matColumnDef="remove">
+            <mat-header-cell *matHeaderCellDef>Remove</mat-header-cell>
+            <mat-cell *matCellDef="let sala">
+              <button mat-icon-button (click)="removeRow(sala)">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </mat-cell>
+          </ng-container>
+        
+          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+        </mat-table>
+        
+      </div>
+    
+    
+
+
+  <br>
+    <button (click)="deleteReserva()" class="deleteButton">Deletar</button>
   </div>
-
- <br>
-  <button (click)="deleteReserva()" class="deleteButton">Delete</button>
-</div>
+  </mat-card-content>
+</mat-card>
