--- a/src/app/tela-salas/tela-permissao-salas/tela-permissao-salas.component.scss
+++ b/src/app/tela-salas/tela-permissao-salas/tela-permissao-salas.component.scss
@@ -3,8 +3,8 @@
   }
   
   .mat-toolbar {
-    background: #ffd740de;
-    color: var(--mat-toolbar-container-text-color);
+    background: rgb(20, 20, 20);
+    color: yellow;
   }
   
   .logo-central {
@@ -18,6 +18,7 @@
   
   .tituloH {
     font-size: 2em;
+    font-family: Copperplate, Copperplate Gothic Light, fantasy;
   }
   
   h1{
