--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,3 +43,6 @@ body {
   background-color: rgb(20, 20, 20);
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
