Alterações telas de salas (Precisa ver a responsividade das tabelas de salas)

--- a/src/app/tela-salas/tela-deletar-salas/tela-deletar-salas.component.html
+++ b/src/app/tela-salas/tela-deletar-salas/tela-deletar-salas.component.html
@@ -25,13 +25,13 @@
   
   </mat-toolbar>
   
-  <h1>DELETAR CADASTRO DE SALAS</h1>
+  <h1>EXCLUIR CADASTRO DE SALAS</h1>
   
   <h3 style="color: yellow; text-align: center;">Toda remoção será permanente!</h3>
   
   <div class="insertData">
   
-    <h4 style="color: yellow;">Escolha a sala que deseja deletar:</h4>
+    <h4 style="color: yellow;">Escolha a sala que deseja excluir:</h4>
     <mat-form-field class="boxSize">
       <mat-label>Sala:</mat-label>
       <mat-select [(value)]="sala" (selectionChange)="procurarSala($event.value)">
@@ -107,5 +107,5 @@
     </div>
   
    <br>
-    <button (click)="deleteReserva()" class="deleteButton">Deletar</button>
+    <button (click)="deleteReserva()" class="deleteButton">Excluir</button>
   </div>
