--- a/src/app/tela-salas/tela-salas-feitas/tela-salas-feitas.component.html
+++ b/src/app/tela-salas/tela-salas-feitas/tela-salas-feitas.component.html
@@ -34,7 +34,7 @@
         [disabled]="!salas.length"
         (click)="removeData()"
         class="demo-button">
-      DELETAR SALAS
+      EXCLUIR SALAS
     </button>
   </div>
   <div class="table-container">
