--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.scss
@@ -1,13 +1,18 @@
 .mat-toolbar {
-  background: #e6b60ade;
-  color: var(--mat-toolbar-container-text-color);
-  border-bottom: 2px solid black;
+  background: #000000;
+  color: yellow;
+  margin-bottom: 0.5%;
 }
 
 .header {
   background: #ffc802de;
   display: flex;
   padding: 1% 0 0 10%;
+}
+
+.tituloH {
+  font-size: 2em;
+  font-family: Copperplate, Copperplate Gothic Light, fantasy;
 }
 
 .container {
@@ -23,54 +28,36 @@
   align-items: center;
   padding: 2% 0%;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.1);
 }
 
 mat-card {
   width: 30%;
   margin-right: 2%;
   background: white;
+  color: black;
+  border: solid 2px black;
   mat-card-header {
-    background-color: rgba(255, 200, 2, 0.8705882353);
+    background-color: rgba(241, 213, 109, 0.959);
   }
   button {
     background: #e6b60ade;
-    color: white;
-  }
-
-  &:hover {
-    background-color: black;
-    color: white;
-    button {
-      background: #e6b60ade;
-    }
+    color: black;
   }
 }
 
 .novoCard {
   background: white;
+  color: black;
 
   mat-card-header {
     background-color: rgba(255, 200, 2, 0.8705882353);
     mat-card-title {
-      color: white;
+      color: black;
     }
   }
   button {
     background: #e6b60ade;
-    color: white;
-  }
-
-  &:hover {
-    background-color: white;
-    color: black !important;
-    mat-card-title {
-      color: black !important;
-    }
-    button {
-      background: #e6b60ade;
-      color: black !important;
-    }
+    color: black;
   }
 }
 
@@ -104,4 +91,39 @@ mat-card-title {
 
 .add-content {
   display: flex;
+}
+
+@media (max-width: 768px) {
+  .header {
+    padding: 5% 2%;
+    text-align: center;
+  }
+
+  .tituloH {
+    font-size: 1.5em;
+  }
+
+  .container {
+    flex-direction: column;
+    padding-left: 0;
+  }
+
+  .cards {
+    flex-direction: column;
+    padding: 5% 0;
+  }
+
+  mat-card {
+    width: 90%;
+    margin: 2% auto;
+  }
+
+  .card-width {
+    width: 90%;
+    height: auto;
+  }
+
+  mat-card-header {
+    height: auto;
+  }
 }
