--- a/src/app/tela-salas/tela-salas.component.html
+++ b/src/app/tela-salas/tela-salas.component.html
@@ -3,7 +3,7 @@
       <h1 style="color: yellow;margin: 0.5cm;">Escolha alguma das opções abaixo:</h1>
       <button mat-raised-button (click)="addData()" class="demo-button">CRIAR NOVAS SALAS</button>
       <br>
-      <button mat-raised-button (click)="removeData()" class="demo-button">DELETAR SALAS</button>
+      <button mat-raised-button (click)="removeData()" class="demo-button">EXCLUIR SALAS</button>
       <br>
       <button mat-raised-button (click)="seeData()" class="demo-button">VER SALAS</button>
       <br>
